# hexlet-flask

./: Makefile  example.py  pyproject.toml
my_site/: example.py
my_site/static/: new.css
my_site/templates/: show.html
my_site/templates/users/: auth.html  index.html  new.html
static/: index.css
templates/: show.html
templates/users/: auth.html  edit.html  index.html  new.html  users.json
